RESOLVED FIXED153289
Web Inspector: InspectorCSSAgent does not call disable in willDestroyFrontendAndBackend
https://bugs.webkit.org/show_bug.cgi?id=153289
Summary Web Inspector: InspectorCSSAgent does not call disable in willDestroyFrontend...
Timothy Hatcher
Reported 2016-01-20 14:59:03 PST
Attachments
Timothy Hatcher
Comment 1 2016-01-20 15:01:58 PST
Note You need to log in before you can comment on or make changes to this bug.