Web Inspector: InspectorCSSAgent does not call disable in willDestroyFrontendAndBackend https://bugs.webkit.org/show_bug.cgi?id=153289 <rdar://problem/24242600>

Reviewed by Joseph Pecoraro.

* inspector/InspectorCSSAgent.cpp:
(WebCore::InspectorCSSAgent::willDestroyFrontendAndBackend): Call disable().

Canonical link: https://commits.webkit.org/171364@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195386 268f45cc-cd09-0410-ab3c-d52691b4dbfc